# densa

./: .gitattributes.example  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.md  log.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  domain-design-help.md  feature_request.md
.github/workflows/: ci.yml  validate.yml
_system/: MANUAL.md  README-template.md  SETUP.md
_system/densa/: __init__.py  __main__.py  cli.py  config.py  formatters.py  frontmatter.py  fswalk.py  git_io.py  paths.py  report.py  runner.py  schema.py  wikilink.py
_system/densa/checks/: __init__.py  analysis_sources.py  base.py  compiled_against_lag.py  frontmatter_required.py  last_validated_stale.py  log_append_only.py  migration_history_hygiene.py  obsidian_link_format.py  operation_writes_scope.py  prompt_schema_sync.py  raw_immutability.py  schema_version_consistency.py  wikilink_resolvable.py
_system/densa/commands/: __init__.py  agent_inject.py  doctor.py  graph_config.py  init.py  migrate.py  stats.py  upgrade.py
_system/densa/mcp/: SPEC.md  __init__.py  server.py  tools.py
_system/densa/tui/: __init__.py  app_curses.py  intents.py  model.py  noise.py  view.py
_system/hooks/: commit-msg  pre-commit
_system/prompts/: ingest.body.md  ingest.md  lint.body.md  lint.md  process-inbox.body.md  process-inbox.md  promote.body.md  promote.md  query.body.md  query.md  visualize.body.md  visualize.md
_system/prompts/domains/: people-interaction-analysis.md  projects-client-call-analysis.md  (+3 more)
_system/scripts/: fix_obsidian_links.py  launch_signal.py  migrate_02_karpathy_vocab.py  setup_encryption.sh
_system/templates/: analysis.md  comparison.md  concept.md  correction.md  decision.md  entity.md  experiment.md  fleeting.md  framework.md  open-question.md  overview.md  pattern.md  project.md  protocol.md  psychiatry-analysis.md  psychology-analysis.md  qa.md  question.md  report.md  session.md  source.md  stakeholder.md  summary.md  synthesis.md  theme.md  vault-readme.md  writing-draft.md  writing-publication.md
_system/tests/: conftest.py  test_check_compiled_against_lag.py  test_check_frontmatter.py  test_check_last_validated_stale.py  test_check_log_append_only.py  test_check_obsidian_link_format.py  test_check_raw_immutability.py  test_cli.py  test_command_agent_inject.py  test_command_graph_config.py  test_command_init.py  test_command_migrate.py  test_command_upgrade.py  test_commit_msg_hook.py  test_doctor.py  test_fix_obsidian_links.py  test_formatters.py  test_frontmatter.py  test_fswalk.py  test_git_io.py  test_hello_world_demo.py  test_hook_script.py  test_mcp_server.py  test_mcp_tools.py  test_migrate_02_karpathy_vocab.py  test_paths.py  test_pre_commit_hooks_yaml.py  test_promote_preflight.py  test_report_type.py  test_rules.py  test_runner.py  test_runner_lint_paths.py  test_stats.py  test_templates_conformance.py  test_tui_guardrail.py  test_tui_model.py  test_tui_noise.py  test_tui_view.py  test_wikilink.py  test_writes_scope.py
_system/wikilint/: __init__.py  __main__.py  cli.py  config.py  formatters.py  frontmatter.py  git_io.py  paths.py  report.py  runner.py  wikilink.py
attic/: README.md
attic/scripts/: migrate_02.py  validate.py
attic/templates-v1/: README.md  experiment.md  fleeting.md  project.md  psychology-analysis.md  session.md  theme.md
docs/: CJK-WORKFLOW.md  DESIGN.md  EXAMPLE-DOMAINS.md  EXAMPLES.md  bootstrap-prompt.md  bootstrap.md  cjk-workflow.md  faq.md  setup.md
docs/design/: README.md  design-rationale.md  harness-memory-vs-llm-wiki.md
docs/reference/: README.md  design-rationale.md  karpathy-mapping.md  operation-scopes.md  red-lines.md  repository-layout.md  rules-registry.md  schema-versioning.md  sources-cardinality.md
domains/psychology/: AGENTS.md  index.md  log.md
domains/research-papers/: AGENTS.md  index.md  log.md
domains/workspace/: AGENTS.md  log.md
examples/hello-world/: README.md  source.md
examples/showcases/: README.md
inbox/: README.md
integrations/: README.md
integrations/claude-code/: README.md
outputs/: README.md
outputs/snapshots/: README.md  index-snapshot.md
(+198 files in other folders)
